# demyst_data_challenge

./: README.md
data-processing/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
data-processing/data_processing/: anonymize_data.py  generate_data.py
data-processing/tests/: test_anonymize_data.py  test_generate_data.py
fixed-width-parser/: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
fixed-width-parser/data/: data.txt
fixed-width-parser/fixed_width_parser/: generate_fixed_width_file.py  parse_fixed_width_file.py
fixed-width-parser/tests/: test_generate_fixed_width_file.py  test_parse_fixed_width_file.py
